--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,7 @@
 - name: Display all variables/facts known for a host
   debug:
     var: hostvars[inventory_hostname]
-  tags: debug_info
+  tags: [ never, debug ]
 
 - name: Install role_bi_packages_net
   include: 01-packages.yml
