--- a/vars/CentOS-8.yml
+++ b/vars/CentOS-8.yml
@@ -1,7 +1,9 @@
 role_bi_packages_net_osd:
   packages:
-   - bind-utils
-   - mtr
-   - tcpdump
-   - tcptraceroute
+  - bind-utils
+  - curl
+  - mtr
+  - tcpdump
+  - tcptraceroute
+  - wget
 
