--- a/tasks/01-packages.yml
+++ b/tasks/01-packages.yml
@@ -2,5 +2,5 @@
   package:
     name: "{{ item }}"
     state: present
-  loop: "{{ role_bi_packages_net_osd.packages }}"
+  loop: "{{ role_bi_packages_net_packages }}"
 
